tests/grammar/valid/generic-call-explicit-01.vit
form Box[T] {
  value: T
}

proc id[T](x: T) -> T {
  give x
}

proc main() -> int {
  let a: Box[int] = Box(1)
  let b = id(1)
  if b == 1 {
    let c = a.value
    emit c
  }
  give 0
}
