tests/grammar/invalid/generic-call-empty-proc-01.vit
proc id[T](x: T) -> T {
give x
}

proc main() -> int {
let y = id[](1)
give 0
}
